--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,10 @@ server:
   port: 8123
   servlet:
     context-path: /api
-  # cookie 30天过期
+  # cookie 7 天过期
   reactive:
     session:
-      timeout: 2592000
+      timeout: 504800
 
 # Spring 配置
 spring:
@@ -16,8 +16,8 @@ spring:
     active: local
   session:
     store-type: redis
-    # session 30 天过期
-    timeout: 2592000
+    # session 7 天过期
+    timeout: 504800
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${mysql.url}
@@ -78,8 +78,8 @@ sa-token:
   token-prefix: Bearer
   # jwt秘钥
   jwt-secret-key: baolong_picture
-  # token 有效期（单位：秒） 默认30天，-1 代表永久有效
-  timeout: 2592000
+  # token 有效期（单位：秒） 7 天，-1 代表永久有效
+  timeout: 504800
   # token 最低活跃频率（单位：秒），如果 token 超过此时间没有访问系统就会被冻结，默认-1 代表不限制，永不冻结
   active-timeout: -1
   # 是否允许同一账号多地同时登录 （为 true 时允许一起登录, 为 false 时新登录挤掉旧登录）
