--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,21 +28,21 @@ spring:
     port: ${redis.port}
     database: ${redis.database}
     password: ${redis.password}
-    # 连接超时时间
+    # 连接超时时间 10 秒
     timeout: 10000
     # 配置连接池
     jedis:
       pool:
         enabled: true
         # 最小空闲连接数
-        min-idle: 1
+        min-idle: 10
         # 最大空闲连接数
         max-idle: 10
         # 最大连接数，-1表示没有限制
         max-active: 50
         # 最大等待时间，-1表示没有限制
         max-wait: -1ms
-        # 断开连接的间隔时间
+        # 断开连接的间隔时间 5 秒
         time-between-eviction-runs: 5000
   # 开放更大的上传大小
   servlet:
