--- a/pom.xml
+++ b/pom.xml
@@ -102,10 +102,10 @@
             <artifactId>jedis</artifactId>
         </dependency>
         <!-- Spring Session + Redis -->
-        <dependency>
-            <groupId>org.springframework.session</groupId>
-            <artifactId>spring-session-data-redis</artifactId>
-        </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>org.springframework.session</groupId>-->
+        <!--    <artifactId>spring-session-data-redis</artifactId>-->
+        <!--</dependency>-->
 
         <!-- 本地缓存 Caffeine -->
         <dependency>
